--- a/Myblogsite/Myblogapp/templates/Myblogapp/create_blog.html
+++ b/Myblogsite/Myblogapp/templates/Myblogapp/create_blog.html
@@ -73,7 +73,7 @@
 
 <div class="create-blog-container">
     <h2 class="create-blog-header">Create New Blog Post</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group mb-3">
             <label for="title">Title</label>
@@ -90,6 +90,10 @@
                     <option value="{{ category.id }}">{{ category.name }}</option>
                 {% endfor %}
             </select>
+        </div>
+        <div class="form-group mb-3">
+            <label for="image">Upload Image</label>
+            <input type="file" class="form-control" id="image" name="image" accept="image/*">
         </div>
         <div class="btn-container mt-4">
             <button type="submit" class="btn btn-primary">Create Post</button>
